static/src/stylesheets/module/commercial/glabs/_hosted-gallery.scss
.hosted-gallery__scroll-container {
    overflow-x: hidden;
    overflow-y: scroll;
    position: absolute;
    top: 0;
    bottom: 0;
    right: -20px;
    left: 0;
    display: none;
}

.use-scroll .hosted-gallery__scroll-container {
    display: block;
}

@mixin gallery-side-margins($container-width) {
    width: $container-width + $gs-gutter * 2;
    margin: 0 auto;
}

@mixin hosted-gallery-cta {
    position: absolute;
    opacity: 0;
    pointer-events: none;
    visibility: hidden;
    bottom: 0;
    left: 0;
    right: 0;
    transition: opacity 300ms ease, visibility 300ms ease;
}

.hosted-gallery__gallery-section {
    position: relative;
    height: 100%;
    width: 100%;
    display: flex;
    flex-direction: column;

    @include mq(desktop) {
        @include gallery-side-margins(gs-span(12));
    }
    @include mq(leftCol) {
        @include gallery-side-margins(gs-span(14));
    }
    @include mq(wide) {
        @include gallery-side-margins(gs-span(16));
    }
}

.hosted-gallery__gallery-container {
    opacity: 0;
    flex: 1;
    position: relative;
    &.use-swipe, &.use-scroll {
        opacity: 1;
    }
}

.has-no-flex .hosted-gallery__gallery-container {
    height: calc(100% - 46px);
    width: 100%;
}

.hosted-gallery__image {
    position: absolute;
    width: 100%;
    height: 100%;
    transition: opacity 300ms ease;
    opacity: 0;
    &:first-child {
        opacity: 1;
    }
    .hosted-gallery__image-sizer {
        position: absolute;
        overflow: hidden;
        width: 100%;
        height: 100%;
    }
    .u-responsive-ratio {
        position: static;
    }
    img {
        object-fit: cover;
    }
}

.hosted-gallery__cta-title {
    @include f-headlineSans;
    color: #ffffff;
    margin-bottom: 15px;
    margin-right: 90px;
    font-size: 20px;
    line-height: 22px;
    @include mq(tablet) {
        font-size: 24px;
        line-height: 26px;
    }
    @include mq(desktop) {
        font-size: 30px;
        line-height: 32px;
    }
    &:hover, &:active {
        text-decoration: none;
    }
}

.hosted-gallery__oj {
    @include hosted-gallery-cta;
    background: rgba(51, 51, 51, .8);
    display: flex;
    color: #ffffff;
    .hosted-gallery__cta-title {
        margin: 0;
        font-size: 18px;
        line-height: 20px;
        @include mq(tablet) {
            font-size: 22px;
            line-height: 24px;
        }
    }
    &.minimise-oj {
        transform: translate(0, 100%);
    }
    transition: opacity 300ms ease, visibility 300ms ease, transform 300ms ease 0ms;
}

.hosted-gallery__oj-sub-header {
    @include f-headlineSans;
    font-size: 14px;
}

.hosted-gallery__oj-cta {
    padding-top: 5px;
}

.hosted-gallery__oj-cta,
.hosted-gallery__oj-next-gallery {
    flex: 1;
    margin: 10px 10px 0;
    border-top: 1px solid;
}

.has-no-flex {
    .hosted-gallery__oj-cta,
    .hosted-gallery__oj-next-gallery {
        width: calc(33% - 22px);
        display: inline-block;
        vertical-align: top;
        @include mq($until: mobileLandscape) {
            width: calc(50% - 22px);
        }
    }
}

.hosted-gallery__oj-next-gallery {
    pointer-events: auto;
    display: flex;
    flex-wrap: wrap-reverse;
    align-items: flex-end;
    align-content: flex-end;
    &:hover, &:active {
        text-decoration: none;
    }
    &:nth-child(3) {
        @include mq($until: mobileLandscape) {
            display: none;
        }
    }
}

.hosted-gallery__oj-close {
    @include f-headlineSans;
    font-size: 14px;
    border-radius: 3px 3px 0 0;
    position: absolute;
    right: $gs-gutter;
    bottom: 100%;
    padding: 6px 4px 0 8px;
    background: rgba(51, 51, 51, .8);
    color: white;
    pointer-events: auto;
    svg {
        transform: scale(.6) rotate(180deg);
        margin-bottom: -6px;
    }
    &:before {
        content: "Hide";
    }
    .minimise-oj &:before {
        content: "Show";
    }
    .minimise-oj & svg {
        transform: scale(.6);
        margin-bottom: -3px;
    }
}

.hosted-gallery__next-gallery-title {
    flex: 1;
    min-width: 110px;
}

.hosted-gallery__next-gallery-image {
    width: 170px;
    height: 95px;
    object-fit: cover;
    @include mq($until: tablet) {
        display: none;
    }
    @include mq($until: desktop) {
        width: 115px;
        height: 65px;
    }
}

.hosted-gallery__cta {
    @include hosted-gallery-cta;
    padding: 50px $gs-gutter * 3 0 $gs-gutter * 5;
    font-weight: bold;
    background: linear-gradient(to top, rgba(51, 51, 51, .7) 0%, rgba(51, 51, 51, .5) 50%, transparent 100%);
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColor=0, endColorstr='#B4333333');
    @include mq($until: tablet) {
        padding: 50px $gs-gutter * 2 0 $gs-gutter;
    }
}

.hosted-gallery__cta-link {
    @include circular;
    @include f-headlineSans;
    position: relative;
    display: inline-block;
    padding: 8px 12px;
    margin: 16px 0;
    color: #ffffff;
    font-weight: bold;
    text-align: center;
    &:hover, &:active {
        text-decoration: none;
    }

    .inline-external-link {
        margin-left: 5px;

        svg {
            height: 22px;
            width: 20px;
            vertical-align: top;
        }
    }

    @include mq($until: tablet) {
        padding: 6px 4px 3px 10px;
        margin: 8px 0 16px;
        width: 140px;
        font-size: 14px;
        .inline-external-link svg {
            height: 16px;
            width: 18px;
        }
    }
}

.show-cta .hosted-gallery__cta,
.show-oj .hosted-gallery__oj {
    opacity: 1;
    transition-delay: 500ms, 500ms, 0ms;
    transition-duration: 500ms;
    visibility: visible;
    .hosted-gallery__cta-link {
        pointer-events: auto;
    }
}

.show-oj.use-swipe .hosted-gallery__progress {
    @include mq($until: tablet) {
        display: none;
    }
}

.use-swipe .hosted-gallery__image {
    position: relative;
    opacity: 1;
}
/* ... */

